--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,7 @@
       --chip-bg: #020617;
       --danger: #ef4444;
     }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
       background: radial-gradient(circle at top, #020617, #020617 55%, #000);
@@ -33,21 +27,17 @@
       justify-content: center;
       padding: 16px 10px;
     }
-
-    /* 전체를 폰 화면처럼 보이게 */
     .app {
       width: 100%;
       max-width: 480px;
       background: #020617;
       border-radius: 28px;
       border: 1px solid #1e293b;
-      box-shadow:
-        0 18px 40px rgba(15, 23, 42, 0.9);
+      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.9);
       display: flex;
       flex-direction: column;
       padding: 14px 14px 10px;
     }
-
     header {
       display: flex;
       align-items: center;
@@ -56,36 +46,17 @@
       border-bottom: 1px solid rgba(15, 23, 42, 0.9);
       margin-bottom: 10px;
     }
-
     .logo-circle {
-      width: 34px;
-      height: 34px;
+      width: 34px; height: 34px;
       border-radius: 12px;
       background: radial-gradient(circle at 30% 0, #f97316, #ec4899 55%, #6366f1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      display: flex; align-items: center; justify-content: center;
       font-size: 18px;
       box-shadow: 0 0 0 1px rgba(15, 23, 42, 0.9);
     }
-
-    .title-wrap {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-    }
-
-    .app-title {
-      font-size: 17px;
-      font-weight: 700;
-      letter-spacing: 0.01em;
-    }
-
-    .app-sub {
-      font-size: 11px;
-      color: var(--text-sub);
-    }
-
+    .title-wrap { display: flex; flex-direction: column; gap: 2px; }
+    .app-title { font-size: 17px; font-weight: 700; letter-spacing: 0.01em; }
+    .app-sub { font-size: 11px; color: var(--text-sub); }
     .tag-pill {
       margin-left: auto;
       font-size: 10px;
@@ -94,39 +65,19 @@
       border: 1px solid rgba(148, 163, 255, 0.5);
       color: var(--text-sub);
     }
-
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
+    main { flex: 1; display: flex; flex-direction: column; gap: 10px; }
     .card {
       background: var(--card);
       border-radius: 20px;
       border: 1px solid var(--border);
       padding: 12px 11px;
     }
-
     .card-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      display: flex; justify-content: space-between; align-items: center;
       margin-bottom: 8px;
     }
-
-    .card-title {
-      font-size: 14px;
-      font-weight: 600;
-    }
-
-    .card-caption {
-      font-size: 11px;
-      color: var(--text-sub);
-      margin-top: 2px;
-    }
-
+    .card-title { font-size: 14px; font-weight: 600; }
+    .card-caption { font-size: 11px; color: var(--text-sub); margin-top: 2px; }
     .step-pill {
       font-size: 10px;
       border-radius: 999px;
@@ -134,9 +85,6 @@
       border: 1px solid var(--border);
       color: var(--text-sub);
     }
-
-    /* 업로드 영역 */
-
     .upload-box {
       border-radius: 16px;
       border: 1px dashed rgba(148, 163, 255, 0.7);
@@ -147,32 +95,11 @@
       margin-bottom: 10px;
       transition: background 0.12s, border-color 0.12s;
     }
-
-    .upload-box:hover {
-      background: #020617;
-      border-color: var(--accent);
-    }
-
-    .upload-icon {
-      font-size: 26px;
-      margin-bottom: 4px;
-    }
-
-    .upload-main {
-      font-size: 13px;
-      font-weight: 600;
-    }
-
-    .upload-sub {
-      font-size: 11px;
-      color: var(--text-sub);
-      margin-top: 3px;
-    }
-
-    #photoInput {
-      display: none;
-    }
-
+    .upload-box:hover { border-color: var(--accent); }
+    .upload-icon { font-size: 26px; margin-bottom: 4px; }
+    .upload-main { font-size: 13px; font-weight: 600; }
+    .upload-sub { font-size: 11px; color: var(--text-sub); margin-top: 3px; }
+    #photoInput { display:none; }
     .preview-block {
       border-radius: 14px;
       border: 1px solid #1e293b;
@@ -181,41 +108,17 @@
       gap: 8px;
       align-items: center;
     }
-
-    .preview-label {
-      font-size: 11px;
-      color: var(--text-sub);
-      min-width: 64px;
-    }
-
+    .preview-label { font-size: 11px; color: var(--text-sub); min-width: 64px; }
     #originalPreview {
-      width: 120px;
-      height: 160px;
+      width: 120px; height: 160px;
       border-radius: 10px;
       border: 1px solid rgba(148, 163, 255, 0.8);
       object-fit: cover;
       display: none;
     }
-
-    #noPreviewText {
-      font-size: 11px;
-      color: var(--text-sub);
-    }
-
-    /* 옵션 칩 */
-
-    .section-title {
-      font-size: 12px;
-      margin-top: 10px;
-      margin-bottom: 4px;
-    }
-
-    .chip-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-    }
-
+    #noPreviewText { font-size: 11px; color: var(--text-sub); }
+    .section-title { font-size: 12px; margin-top: 10px; margin-bottom: 4px; }
+    .chip-row { display: flex; flex-wrap: wrap; gap: 6px; }
     .chip {
       font-size: 11px;
       padding: 6px 11px;
@@ -225,20 +128,12 @@
       color: var(--text-sub);
       cursor: pointer;
     }
-
     .chip.active {
       background: var(--accent);
       border-color: var(--accent-strong);
       color: #fff;
     }
-
-    .hint-row {
-      display: flex;
-      gap: 6px;
-      margin-top: 8px;
-      flex-wrap: wrap;
-    }
-
+    .hint-row { display:flex; gap:6px; margin-top:8px; flex-wrap:wrap; }
     .hint-pill {
       font-size: 10px;
       padding: 4px 8px;
@@ -246,16 +141,12 @@
       border: 1px solid #1f2937;
       color: var(--text-sub);
     }
-
-    /* 결과 카드 */
-
     .status-line {
       font-size: 11px;
       color: var(--text-sub);
       margin-top: 6px;
       min-height: 14px;
     }
-
     .main-btn {
       width: 100%;
       margin-top: 8px;
@@ -274,19 +165,16 @@
       cursor: pointer;
       transition: transform 0.08s, box-shadow 0.08s, opacity 0.1s;
     }
-
     .main-btn:active {
       transform: translateY(1px);
       box-shadow: 0 6px 16px rgba(248, 113, 22, 0.35);
     }
-
     .main-btn:disabled {
       opacity: 0.4;
       cursor: default;
       box-shadow: none;
       transform: none;
     }
-
     .ai-chip {
       font-size: 10px;
       padding: 3px 7px;
@@ -294,68 +182,6 @@
       border: 1px solid #1e293b;
       background: rgba(15, 23, 42, 0.95);
       color: var(--text-sub);
-    }
-
-    .result-grid {
-      margin-top: 10px;
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 6px;
-    }
-
-    .result-card {
-      background: #020617;
-      border-radius: 12px;
-      border: 1px solid #1f2937;
-      padding: 4px;
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-      align-items: center;
-    }
-
-    .result-img {
-      width: 100%;
-      aspect-ratio: 3 / 4;
-      border-radius: 8px;
-      object-fit: cover;
-      border: 1px solid rgba(148, 163, 255, 0.7);
-    }
-
-    .result-label {
-      font-size: 11px;
-      color: var(--text-sub);
-      text-align: center;
-    }
-
-    .products-btn {
-      margin-top: 8px;
-      width: 100%;
-      padding: 9px;
-      border-radius: 999px;
-      border: 1px solid #1f2937;
-      background: #020617;
-      color: var(--text-sub);
-      font-size: 12px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-      cursor: pointer;
-      transition: background 0.1s, border-color 0.1s, color 0.1s;
-    }
-
-    .products-btn:hover {
-      background: #020617;
-      border-color: rgba(148, 163, 255, 0.8);
-      color: #e5e7eb;
-    }
-
-    .foot {
-      margin-top: 2px;
-      font-size: 10px;
-      color: var(--text-sub);
-      text-align: right;
     }
   </style>
 </head>
@@ -371,7 +197,6 @@
     </header>
 
     <main>
-      <!-- 1. 사진 + 옵션 -->
       <section class="card">
         <div class="card-header">
           <div>
@@ -413,29 +238,19 @@
         </div>
       </section>
 
-      <!-- 2. 결과 -->
       <section class="card">
         <div class="card-header">
           <div>
             <div class="card-title">AI 스타일 미리보기</div>
-            <p class="card-caption">실제 시술 전, 느낌만 빠르게 보여주는 용도입니다.</p>
+            <p class="card-caption">버튼을 누르면 다음 화면에서 크게 보여줍니다.</p>
           </div>
-          <span class="ai-chip">AI 모의 스타일링</span>
+          <span class="ai-chip">STEP 3</span>
         </div>
 
         <button id="generateBtn" class="main-btn" disabled>
-          <span>✨</span> <span id="btnLabel">AI로 스타일 3가지 보기 (테스트)</span>
+          <span>✨</span> <span id="btnLabel">AI로 스타일 3가지 보기</span>
         </button>
         <p id="statusText" class="status-line"></p>
-
-        <div id="resultCard" style="display:none;">
-          <div class="result-grid" id="resultGrid"></div>
-
-          <button class="products-btn" onclick="window.location.href='/products.html'">
-            🛍 스타일 유지 · 홈케어 상품 보기
-          </button>
-          <div class="foot">* 쿠팡 파트너스 링크가 포함될 수 있습니다.</div>
-        </div>
       </section>
     </main>
   </div>
@@ -448,8 +263,6 @@
     const generateBtn = document.getElementById("generateBtn");
     const btnLabel = document.getElementById("btnLabel");
     const statusText = document.getElementById("statusText");
-    const resultCard = document.getElementById("resultCard");
-    const resultGrid = document.getElementById("resultGrid");
 
     let selectedImageBase64 = null;
     let selectedGender = "female";
@@ -471,7 +284,7 @@
         originalPreview.style.display = "block";
         if (noPreviewText) noPreviewText.style.display = "none";
         generateBtn.disabled = false;
-        statusText.textContent = "사진이 준비되었습니다. 아래 버튼을 눌러 스타일을 확인해 주세요.";
+        statusText.textContent = "사진이 준비되었습니다. 아래 버튼을 누르면 다음 화면에서 결과를 보여줍니다.";
       };
       reader.readAsDataURL(file);
     });
@@ -518,26 +331,16 @@
         const data = await res.json();
         if (!data.success || !data.styles) throw new Error("AI 결과가 올바르지 않습니다.");
 
-        resultGrid.innerHTML = "";
-        data.styles.forEach((item, idx) => {
-          const div = document.createElement("div");
-          div.className = "result-card";
-          div.innerHTML = `
-            <img class="result-img" src="${item.image}" alt="스타일 ${idx + 1}" />
-            <div class="result-label">${item.name}</div>
-          `;
-          resultGrid.appendChild(div);
-        });
-
-        resultCard.style.display = "block";
-        statusText.textContent = "테스트용으로 같은 사진 3장을 보여줍니다. 나중에 AI 결과로 교체할 수 있습니다.";
+        // 👉 결과를 sessionStorage에 저장하고 다음 페이지로 이동
+        sessionStorage.setItem("hairStyles", JSON.stringify(data.styles));
+        sessionStorage.setItem("basePhoto", selectedImageBase64);
+        window.location.href = "/result.html";
       } catch (err) {
         console.error(err);
         statusText.textContent = "오류가 발생했습니다. 잠시 후 다시 시도해 주세요.";
         alert("AI 스타일 생성 중 오류가 발생했습니다.");
-      } finally {
         generateBtn.disabled = false;
-        btnLabel.textContent = "AI로 스타일 3가지 보기 (테스트)";
+        btnLabel.textContent = "AI로 스타일 3가지 보기";
       }
     });
   </script>
