--- a/public/result.html
+++ b/public/result.html
@@ -2,143 +2,231 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AI 스타일 결과 보기</title>
+  <title>AI 스타일 결과</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <style>
     :root {
-      --bg: #020617;
-      --card: #0b1220;
+      --bg1: #020617;
+      --bg2: #020617;
+      --card: rgba(15, 23, 42, 0.96);
+      --card-soft: rgba(15, 23, 42, 0.9);
       --accent: #f97316;
-      --border: #1e293b;
+      --accent-strong: #ea580c;
+      --border: rgba(51, 65, 85, 0.9);
       --text-main: #f9fafb;
       --text-sub: #9ca3af;
     }
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       font-family: -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
-      background: radial-gradient(circle at top, #020617, #020617 55%, #000);
+    }
+
+    body {
+      background: radial-gradient(circle at top, var(--bg1), var(--bg2) 55%, #000);
       color: var(--text-main);
       min-height: 100vh;
-      display:flex;
-      justify-content:center;
-      padding:16px 10px;
+      display: flex;
+      justify-content: center;
+      padding: 16px 10px;
     }
+
     .app {
-      width:100%;
-      max-width:480px;
-      background:#020617;
-      border-radius:28px;
-      border:1px solid #1e293b;
-      box-shadow:0 18px 40px rgba(15,23,42,0.9);
-      padding:14px 14px 10px;
-      display:flex;
-      flex-direction:column;
+      width: 100%;
+      max-width: 480px;
+      background: rgba(15, 23, 42, 0.98);
+      border-radius: 28px;
+      border: 1px solid rgba(30, 64, 175, 0.6);
+      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.9);
+      display: flex;
+      flex-direction: column;
+      padding: 14px 14px 12px;
+      backdrop-filter: blur(18px);
     }
+
     header {
-      display:flex; align-items:center; gap:10px;
-      padding:6px 4px 10px;
-      border-bottom:1px solid rgba(15,23,42,0.9);
-      margin-bottom:10px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 6px 4px 10px;
+      border-bottom: 1px solid rgba(15, 23, 42, 0.9);
+      margin-bottom: 10px;
     }
+
     .back-btn {
-      font-size:20px;
-      width:28px; height:28px;
-      border-radius:999px;
-      border:1px solid #1f2937;
-      display:flex; align-items:center; justify-content:center;
-      cursor:pointer;
-      margin-right:4px;
+      width: 30px;
+      height: 30px;
+      border-radius: 999px;
+      border: 1px solid rgba(51, 65, 85, 0.9);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      background: rgba(15, 23, 42, 0.96);
+      font-size: 16px;
     }
-    .title-wrap { display:flex; flex-direction:column; gap:2px; }
-    .title { font-size:16px; font-weight:600; }
-    .sub { font-size:11px; color:var(--text-sub); }
-    main { flex:1; display:flex; flex-direction:column; gap:10px; }
+
+    .title-wrap {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+    }
+
+    .title {
+      font-size: 16px;
+      font-weight: 600;
+    }
+
+    .sub {
+      font-size: 11px;
+      color: var(--text-sub);
+    }
+
+    main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      overflow-y: auto;
+      padding-bottom: 6px;
+    }
+
     .card {
-      background:var(--card);
-      border-radius:20px;
-      border:1px solid var(--border);
-      padding:12px 11px;
+      background: var(--card);
+      border-radius: 20px;
+      border: 1px solid var(--border);
+      padding: 12px 11px;
     }
-    .card-title { font-size:14px; font-weight:600; margin-bottom:6px; }
-    .card-caption { font-size:11px; color:var(--text-sub); margin-bottom:10px; }
+
+    .card-title {
+      font-size: 14px;
+      font-weight: 600;
+      margin-bottom: 4px;
+    }
+
+    .card-caption {
+      font-size: 11px;
+      color: var(--text-sub);
+      margin-bottom: 10px;
+    }
 
     .base-photo {
-      display:flex;
-      gap:8px;
-      align-items:center;
-      margin-bottom:10px;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      margin-bottom: 10px;
     }
+
     .base-photo img {
-      width:80px; height:110px;
-      border-radius:10px;
-      border:1px solid rgba(148,163,255,0.7);
-      object-fit:cover;
+      width: 72px;
+      height: 96px;
+      border-radius: 12px;
+      border: 1px solid rgba(148, 163, 255, 0.9);
+      object-fit: cover;
     }
-    .base-photo-text { font-size:11px; color:var(--text-sub); }
+
+    .base-photo-text {
+      font-size: 11px;
+      color: var(--text-sub);
+      line-height: 1.4;
+    }
 
     .grid {
-      display:flex;
-      flex-direction:column;
-      gap:10px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
     }
+
     .style-card {
-      background:#020617;
-      border-radius:16px;
-      border:1px solid #1f2937;
-      padding:8px;
-      display:flex;
-      flex-direction:column;
-      gap:6px;
+      background: var(--card-soft);
+      border-radius: 18px;
+      border: 1px solid rgba(55, 65, 81, 0.9);
+      padding: 9px 9px 10px;
     }
+
+    .style-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      margin-bottom: 6px;
+    }
+
     .style-name {
-      font-size:12px;
-      font-weight:500;
+      font-size: 13px;
+      font-weight: 600;
     }
+
+    .style-tag {
+      font-size: 10px;
+      padding: 3px 7px;
+      border-radius: 999px;
+      border: 1px solid rgba(55, 65, 81, 0.9);
+      color: var(--text-sub);
+    }
+
     .style-img {
-      width:100%;
-      max-height:340px;
-      border-radius:12px;
-      border:1px solid rgba(148,163,255,0.8);
-      object-fit:cover;
+      width: 100%;
+      max-height: 340px;
+      border-radius: 14px;
+      border: 1px solid rgba(148, 163, 255, 0.85);
+      object-fit: cover;
+      display: block;
+    }
+
+    .style-desc {
+      font-size: 11px;
+      color: var(--text-sub);
+      margin-top: 6px;
+      line-height: 1.5;
+    }
+
+    .empty {
+      font-size: 12px;
+      color: var(--text-sub);
+      text-align: center;
+      padding: 40px 10px;
     }
 
     .btn-row {
-      display:flex;
-      gap:8px;
-      margin-top:10px;
+      display: flex;
+      gap: 8px;
+      margin-top: 10px;
     }
-    .btn-primary, .btn-secondary {
-      flex:1;
-      padding:10px;
-      border-radius:999px;
-      border:none;
-      font-size:13px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap:6px;
-      cursor:pointer;
-    }
-    .btn-primary {
-      background:linear-gradient(135deg, var(--accent), #ea580c);
-      color:#fff;
-    }
+
+    .btn-primary,
     .btn-secondary {
-      background:#020617;
-      color:var(--text-sub);
-      border:1px solid #1f2937;
+      flex: 1;
+      padding: 11px;
+      border-radius: 999px;
+      border: none;
+      font-size: 13px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      cursor: pointer;
     }
+
+    .btn-primary {
+      background: linear-gradient(135deg, var(--accent), var(--accent-strong));
+      color: #fff;
+      box-shadow: 0 10px 24px rgba(248, 113, 22, 0.5);
+    }
+
+    .btn-secondary {
+      background: rgba(15, 23, 42, 0.96);
+      color: var(--text-sub);
+      border: 1px solid rgba(55, 65, 81, 0.9);
+    }
+
     .foot {
-      margin-top:4px;
-      font-size:10px;
-      color:var(--text-sub);
-      text-align:right;
-    }
-    .empty {
-      font-size:12px;
-      color:var(--text-sub);
-      text-align:center;
-      margin-top:40px;
+      margin-top: 4px;
+      font-size: 10px;
+      color: var(--text-sub);
+      text-align: right;
     }
   </style>
 </head>
@@ -150,20 +238,23 @@
       </div>
       <div class="title-wrap">
         <div class="title">AI 스타일 결과</div>
-        <div class="sub">손님께 화면만 보여주고 스타일을 골라보세요.</div>
+        <div class="sub">3가지 헤어 옵션 중 마음에 드는 스타일을 골라보세요.</div>
       </div>
     </header>
 
     <main>
       <section class="card" id="resultSection">
         <div class="card-title">추천 스타일 3가지</div>
-        <p class="card-caption">현재는 테스트 단계라 같은 사진이 반복될 수 있습니다.</p>
+        <p class="card-caption">
+          지금은 테스트 단계라 비슷한 이미지가 보일 수 있어요.  
+          그래도 전체적인 느낌을 확인해 보세요.
+        </p>
 
         <div class="base-photo" id="basePhotoBlock" style="display:none;">
-          <img id="basePhoto" alt="원본 사진" />
+          <img id="basePhoto" alt="기준 사진" />
           <div class="base-photo-text">
-            현재 고객 사진입니다.<br/>
-            이 사진을 기준으로 스타일을 가상 적용했습니다.
+            이 사진을 기준으로<br />
+            AI가 3가지 스타일을 가상 적용했습니다.
           </div>
         </div>
 
@@ -171,18 +262,18 @@
 
         <div id="emptyState" class="empty" style="display:none;">
           불러올 스타일 정보가 없습니다.<br />
-          처음 화면에서 다시 스타일을 생성해 주세요.
+          처음 화면에서 다시 스타일을 만들어 주세요.
         </div>
 
         <div class="btn-row">
           <button class="btn-secondary" onclick="goBack()">
-            다시 촬영 / 다시 선택
+            ↩ 다시 찍어보기
           </button>
           <button class="btn-primary" onclick="goProducts()">
-            🛍 추천 상품 보기
+            🛍 추천 스타일 제품 보기
           </button>
         </div>
-        <div class="foot">* 쿠팡 파트너스 링크가 포함될 수 있습니다.</div>
+        <div class="foot">일부 링크에는 제휴 또는 광고가 포함될 수 있습니다.</div>
       </section>
     </main>
   </div>
@@ -191,13 +282,15 @@
     function goBack() {
       window.location.href = "/";
     }
+
     function goProducts() {
       window.location.href = "/products.html";
     }
 
-    // sessionStorage에서 결과 가져오기
+    // sessionStorage에서 결과 불러오기
     const stylesJson = sessionStorage.getItem("hairStyles");
     const basePhoto = sessionStorage.getItem("basePhoto");
+
     const stylesGrid = document.getElementById("stylesGrid");
     const emptyState = document.getElementById("emptyState");
     const basePhotoBlock = document.getElementById("basePhotoBlock");
@@ -207,20 +300,38 @@
       emptyState.style.display = "block";
     } else {
       const styles = JSON.parse(stylesJson);
-      stylesGrid.innerHTML = "";
-      styles.forEach((style, idx) => {
-        const card = document.createElement("div");
-        card.className = "style-card";
-        card.innerHTML = `
-          <div class="style-name">${style.name || `스타일 ${idx + 1}`}</div>
-          <img class="style-img" src="${style.image}" alt="스타일 ${idx + 1}" />
-        `;
-        stylesGrid.appendChild(card);
-      });
+
       if (basePhoto) {
         basePhotoBlock.style.display = "flex";
         basePhotoImg.src = basePhoto;
       }
+
+      const defaultDescs = [
+        "부드러운 인상을 살려주는 자연스러운 스타일입니다. 일상용으로 부담 없이 어울려요.",
+        "조금 더 또렷한 인상을 주는 스타일입니다. 사진 촬영이나 약간 꾸미고 싶은 날에 추천!",
+        "조금 더 과감하고 분위기 있는 느낌의 스타일입니다. 스타일 변화를 주고 싶을 때 어울립니다."
+      ];
+
+      stylesGrid.innerHTML = "";
+
+      styles.forEach((style, idx) => {
+        const card = document.createElement("div");
+        card.className = "style-card";
+
+        const name = style.name || `스타일 옵션 ${idx + 1}`;
+        const img = style.image;
+        const desc = style.desc || defaultDescs[idx] || defaultDescs[defaultDescs.length - 1];
+
+        card.innerHTML = `
+          <div class="style-header">
+            <div class="style-name">${name}</div>
+            <div class="style-tag">옵션 ${idx + 1}</div>
+          </div>
+          <img class="style-img" src="${img}" alt="${name}" />
+          <p class="style-desc">${desc}</p>
+        `;
+        stylesGrid.appendChild(card);
+      });
     }
   </script>
 </body>
